--- a/css/typewriter.css
+++ b/css/typewriter.css
@@ -20,7 +20,7 @@ main {
     position: absolute;
     top: 0;
     width: 100vw;
-    height: 90vh;
+    height: 100%;
     display: flex;
     /* justify-content: center; */
     align-items: center;
