--- a/css/navbar.css
+++ b/css/navbar.css
@@ -16,7 +16,7 @@ header {
     top: 0;
     background-color: rgba(3, 48, 48, 0.4);
     width: 100%;
-    height: 5vw;
+    height: 5vh;
     display: flex;
     /* justify-content: center; */
     align-items: center;
@@ -26,6 +26,7 @@ header {
     font-optical-sizing: auto;
     font-weight: 900;
     font-style: normal;
+    padding: 1vw 0;
 }
 
 header nav {
@@ -36,13 +37,13 @@ header nav {
 }
 
 header nav img {
-    width: 6vw;
+    width: 12vh;
 }
 
 header nav img:hover {
-    transition: 0.25s all;
+    transition: all 1s;
     transform: rotate(2deg);
-    width: 7vw;
+    width: 13vh;
 }
 
 header nav ul {
@@ -90,9 +91,9 @@ header nav ul li a {
     color: white;
     border: 2px solid white;
     font-weight: 900;
-    padding: 0.5vw 1.5vw;
-    border-radius: 9px;
-    font-size: 1vw;
+    padding: 0.5vh 1.5vh;
+    border-radius: 0.4vw;
+    font-size: 2vh;
     transition: 0.25s all;
     cursor: pointer;
 }
