--- a/css/preloader.css
+++ b/css/preloader.css
@@ -55,7 +55,7 @@
 
 .preloader img{
     width: 20vw;
-    height: 9vw;
+    /* height: 9vw; */
     position: absolute;
     top: 41%;
     left: 39%;
