--- a/css/preloader.css
+++ b/css/preloader.css
@@ -56,10 +56,10 @@
 
 .preloader img{
     width: 20vw;
-    height: 12vw;
+    height: 9vw;
     position: absolute;
-    top: calc(50% - 6vw);
-    left: calc(50% - 10vw);
+    top: 41%;
+    left: 39%;
     animation: pumpLogo 1s linear infinite;
     /* color: #8DECB4; */
 }
