ai club website

--- a/css/loader.css
+++ b/css/loader.css
@@ -12,7 +12,7 @@
     height: 100vh;
 }
 .loader .bar{
-    background-color: #001414;
+    background-color: #3B1E54;
     width: 16.67vw;
     /* height: 100vh; */
     /* height: 0; */
