--- a/css/navbar.css
+++ b/css/navbar.css
@@ -10,11 +10,11 @@
     }
 }
 
-header {
+.header {
     z-index: 3;
     position: fixed;
     top: 0;
-    background-color: rgba(3, 48, 48, 0.4);
+    background-color: rgba(90, 50, 126, 0.4);
     width: 100%;
     height: 5vh;
     display: flex;
@@ -26,40 +26,41 @@ header {
     font-optical-sizing: auto;
     font-weight: 900;
     font-style: normal;
-    padding: 1vw 0;
+    padding: 2.1vw 0;
 }
 
-header nav {
+.header nav {
     width: 80%;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-header nav img {
-    width: 12vh;
+.header nav img {
+    width: 5.5vh;
 }
 
-header nav img:hover {
+.header nav img:hover {
     transition: all 1s;
     transform: rotate(2deg);
-    width: 13vh;
+    width: 6.5vh;
 }
 
-header nav ul {
+.header nav .lists {
     width: 100%;
     display: flex;
     /* justify-; */
     justify-content: space-evenly;
+    align-items: center;
 }
 
-header nav ul li {
+.header nav ul .item {
     list-style: none;
     position: relative;
 
 }
 
-header nav ul li:hover::after {
+.header nav ul .item:hover::after {
     content: " ";
     position: absolute;
     bottom: 0;
@@ -70,23 +71,23 @@ header nav ul li:hover::after {
     animation: hoverList 0.5s ease;
 }
 
-header nav ul li:hover {
+.header nav ul .item:hover {
     transform: scale(1.05);
 
 }
 
-header nav ul li a:hover {
+.header nav ul .item .link:hover {
     color: #F2E5BF;
 
 }
 
-header nav ul li a {
+.header nav ul .item .link {
     text-decoration: none;
     font-weight: 700;
 
 }
 
-.btn {
+.btn-2 {
     background-color: transparent;
     color: white;
     border: 2px solid white;
@@ -98,8 +99,8 @@ header nav ul li a {
     cursor: pointer;
 }
 
-.btn:hover {
-    background-color: rgb(2, 126, 2);
+.btn-2:hover {
+    background-color: #D91656;
     transform: scale(1.05);
     border: transparent;
 }
